--- a/session 6/homeWork1.css
+++ b/session 6/homeWork1.css
@@ -2,6 +2,7 @@
 	text-align: center;
 	margin: 0;
 	padding: 0;
+	max-height: 700px;
 }
 .container{
 	width: 80%;
@@ -26,6 +27,7 @@ header{
 }
 #slider{
 	height: 100px;
+	border-bottom: 1px solid black;
 
 }
 #main{
@@ -37,22 +39,25 @@ header{
 	width: 33.1%;
 	float: left;
 	border-top: none;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	border-bottom: none;
 
 }
 .new2{
 	height: 100px;
 	width: 33.2%;
 	float: left;
-	border: 1px solid black;
 	border-top: none;
 	border-bottom: none;
-	border-right: none;
 }
 .new3{
 	height: 100px;
-	width: 33.2%;
+	width: 33.1%;
 	float: left;
 	border-left: 1px solid black;
+	border-right: 1px solid black;
+	border-bottom: none;
 }
 .ads1{
  	height: 100px;
@@ -60,6 +65,7 @@ header{
  	float: left;
  	border: 1px solid black;
  	border-right: none;
+ 	border-top: none;
 }
 .ads2{
  	height: 100px;
@@ -67,6 +73,7 @@ header{
  	float: left;
  	border:1px solid black;
  	border-right: none;
+ 	border-top: none;
 }
 #content{
 	height: 300px;
@@ -118,12 +125,13 @@ header{
 		width: 100%;
 		border-bottom: 1px solid black;
 	}
-	.content{
+	#content{
 		width: 100%;
 	}
 	.new2{
 		width: 49.5%;
 		border-right: 1px solid black;
+		border-bottom: 1px solid black;
 	}
 	.new3{
 		width: 100%;
@@ -131,9 +139,6 @@ header{
 		border-bottom: 1px solid black;
 		border-right: none;
 		border-top: none;
-	}
-	.content{
-		width: 50%;
 	}
 	.footer2{
 		width:49.4%;
@@ -148,47 +153,46 @@ header{
 }
 @media screen and (max-width: 480px){
 	.logo{
-		width: 100%;
+		width: 100%
 	}
 	.slogo{
 		width: 100%;
 		border-right: 1px solid black;
 	}
+	.new1{
+		width: 100%;
+		border-left: 1px solid black;
+		border-bottom: 1px solid black;
+
+	}
 	#slider{
 		width: 0%;
 		display: none;
 	}
-	.new1{
+	#content{
 		width: 100%;
-		border-bottom: 1px solid black;
 	}
 	.new2{
 		width: 100%;
-		border-bottom: 1px solid black;
-		border-right: none;
+		border-right: 1px solid black;
 	}
 	.new3{
-		width: 0%;
-		display: none;
-	}
-	.ads1{
 		width: 100%;
-	}
-	.ads2{
-		width: 0%;
 		display: none;
-		
-	}
-	.content{
-		width: 50%;
-		border:1px solid black;
-	}
-	.footer1{
-		width: 100%;
-
 	}
 	.footer2{
 		width:100%;
 		border:1px solid black;
+	}
+	.footer1{
+		width: 100%;
+	}
+	.ads1{
+		width: 100%;
+
+	}
+	.ads2{
+		width: 0%;
+		display: none;
 	}
 }
