--- a/session 6/homeWork1.css
+++ b/session 6/homeWork1.css
@@ -12,18 +12,19 @@
 }
 header{
 	height: 100px;
-	border-bottom:1px solid black;
 }
 .logo{
 	height: 100px;
-	width: 40%;
+	width: 41.5%;
 	float: left;
+	border-bottom:1px solid black;
 }
 .slogo{
 	height: 100px;
-	width: 55%;
+	width: 58%;
 	float: left;
 	border-left: 1px solid black;
+	border-bottom:1px solid black;
 }
 #slider{
 	height: 100px;
@@ -53,7 +54,7 @@ header{
 }
 .new3{
 	height: 100px;
-	width: 33.1%;
+	width: 33.2%;
 	float: left;
 	border-left: 1px solid black;
 	border-right: 1px solid black;
@@ -153,7 +154,8 @@ header{
 }
 @media screen and (max-width: 480px){
 	.logo{
-		width: 100%
+		width: 100%;
+		border-right: none;
 	}
 	.slogo{
 		width: 100%;
@@ -163,6 +165,7 @@ header{
 		width: 100%;
 		border-left: 1px solid black;
 		border-bottom: 1px solid black;
+		border-right: none;
 
 	}
 	#slider{
@@ -171,6 +174,7 @@ header{
 	}
 	#content{
 		width: 100%;
+		padding-bottom: 100px;
 	}
 	.new2{
 		width: 100%;
@@ -183,9 +187,13 @@ header{
 	.footer2{
 		width:100%;
 		border:1px solid black;
+		border-top: none;
+
 	}
 	.footer1{
 		width: 100%;
+		border-right: none;
+		border-top:none;
 	}
 	.ads1{
 		width: 100%;
