--- a/session 6/homeWork2.css
+++ b/session 6/homeWork2.css
@@ -10,13 +10,17 @@ li:before {
 }
 body{
 	width: 70%;
+	height: 669px;
 	margin: 0 auto;
 	border-spacing: 0px;
 	margin-top: 16px;
-
+	border:5px solid grey;
+	border-left: none;
+	border-top: none;
 }
 .box{
 	height: 70px;
+	width: 97%;
 	background-color: #66a3ff;
 	border: 10px dashed grey;
 	border-right: none;
@@ -32,7 +36,7 @@ body{
 .global{
 	float: left;
 	height: 30px;
-	width: 40%;
+	width: 37%;
 	margin-left: 20px;
 	background-color: #b3d1ff;
 }
@@ -66,7 +70,7 @@ body{
 .box2{
 	float: left;
 	height: 110px;
-	width: 30%;
+	width: 27.5%;
 	margin-left: 15px;
 	margin-top: 15px;
 	background-color: #66a3ff;
@@ -78,6 +82,7 @@ body{
 	height: 260px;
 	float: left;
 	background-color: #66a3ff;
+	border-top: 10px dashed grey;
 	margin-top: 15px;
 }
 .articleFeature{
@@ -96,10 +101,11 @@ body{
 .box4{
 	float: left;
 	height: 260px;
-	width: 30%;
+	width: 27.5%;
 	background-color: #66a3ff;
 	margin-left: 15px;
 	margin-top:15px;
+	border-top: 10px dashed grey;
 }
 .sidebar{
 	height: 210px;
@@ -108,9 +114,19 @@ body{
 }
 .box5{
 	height: 120px;
-	width: 100%;
+	width: 97%;
 	float: left;
 	background-color: #66a3ff;
 	margin-top: 15px;
+	border-bottom: 10px dashed grey;
+	border-top: 10px dashed grey;
 }
+@media screen and (max-width: 1024){
 
+}
+@media screen and (max-width: 1024){
+	
+}
+@media screen and (max-width: 1024){
+	
+}
