--- a/session 6/homeWork2.css
+++ b/session 6/homeWork2.css
@@ -228,5 +228,94 @@ body{
 	
 }
 @media screen and (max-width: 480px){
+	body{
+		height: 420px;
+		border: 5px solid grey;
+		border-right: none;
+		border-top: none;
+		border-bottom: 5px solid grey;
+	}
+	.box{
+		height: 80px;
+	}
+	.brand{
+		width: 100%;
+		height: 20px;
+	}
+	.global{
+		height: 20px;
+		width: 45%;
+		float: left;
+		margin-top: 5px;
+		text-align: center;
+		line-height: 10px;
+		margin-left: 1px;
+	}
+	.tools{
+		height: 20px;
+		width: 46%;
+		float: left;
+		margin-top: 5px;
+		padding: 0px;
+	}
+	.box1{
+		height: 50px;
+		margin-top: 10px;
+	}
+	.heroFeture{
+		display: none;
+	}
+	.heroColl{
+		height: 30px;
+		width: 100%;
+		text-align: center;
+		line-height: 17px;
+
+	}
+	.box3{
+		height:5px;
+		width: 100%;
+		background-color: #66a3ff;
+		margin-top: -43px;
+	}
+	#main{
+		width: 97%;
+		height: 100px;
+		margin-top:70px;
+	}
+	.articleFeature{
+		width: 100%;
+		height: 20px;
+		text-align: center;
+		line-height: 10px;
+		margin-top: 30px;
+	}
+	.box2{
+		width: 86%;
+		height: 30px;
+		text-align: center;
+		line-height: 18px;
+		margin-top: 10px;
+	}
+	.articalListing{
+		height: 23px;
+		
+		width: 100%;
+		text-align: center;
+		line-height: 17px;
+		margin-top: -30px;
+	}
 	
+	.box4{
+		width: 0%;
+		display: none;
+	}
+	.box5{
+		
+	}
+	.heroColl{
+		height: 30px;
+		width: 100%;
+
+	}
 }
