--- a/session 6/homeWork3.css
+++ b/session 6/homeWork3.css
@@ -11,7 +11,7 @@ body{
 	text-align: center;
 	line-height: 23px;
 	float: left;
-	background-color: blue;
+	background-color: #0080ff;
 	margin-left: 1%;
 	border-radius: 4px;
 }
@@ -22,7 +22,7 @@ body{
 	text-align: right;
 	line-height: 100px;
 	padding-right: 10px;
-	background-color: blue;
+	background-color: #0080ff;
 	border-radius: 10px;
 	margin-top: 10px;
 	float: left;
@@ -31,25 +31,26 @@ body{
 .article{
 	width: 40%;
 	height: 90px;
-	background-color: blue;
+	background-color: #0080ff;
 	float: left;
 	border-radius: 5px;
 	margin: 0;
 	margin-right: 1%;
 	margin-top: 10px;
 	text-align: right;
+	line-height: 50px;
 	font-size: 30px;
 
 }
 footer{
 	height: 50px;
-	background-color: blue;
+	background-color: #0080ff;
 	width: 81%;
 	float: left;
 	border-radius: 10px;
 	margin-top: 10px;
 	text-align: center;
-	line-height: 30px;
+	line-height: 40px;
 	font-size: 20px;
 }
 @media screen and (max-width: 1024px){
@@ -67,7 +68,7 @@ footer{
 		-o-transform:rotate(90deg);
 		-ms-transform:rotate(90deg);
 		text-align: center;
-		line-height: -20%;
+		line-height: -70%;
 		font-size: 25px;
 	}
 	footer{
@@ -94,11 +95,14 @@ footer{
 			line-height: 60px;
 			float: left;
 			margin-top: 5px;
+			border-radius: 10px;
 		}
 		footer{
 			width: 100%;
 			float: left;
 			margin-top: 5px;
-			height: 40px;
+			height: 35px;
+			text-align: center;
+			line-height: 30px;
 		}
 }
