--- a/session 6/homeWork2.css
+++ b/session 6/homeWork2.css
@@ -11,20 +11,23 @@ li:before {
 }
 body{
 	width: 70%;
-	height: 669px;
+	height: 699px;
 	margin: 0 auto;
 	margin-top: 16px;
 	border:5px solid grey;
 	border-left: none;
 	border-top: none;
+	border-top: 10px dashed grey;
 }
 .box{
 	height: 70px;
 	width: 97%;
 	background-color: #66a3ff;
-	border:  10px dashed grey;
 	border-right: none;
 	border-left: none;
+	margin-top: -15px;
+	border-bottom: 10px dashed grey;
+	padding-bottom: -10px;
 }
 .brand{
 	float: left;
@@ -59,6 +62,7 @@ body{
 	float: left;
 	background-color: #66a3ff;
 	margin-top: 15px;
+
 }
 .heroFeture{
 	height: 80px;
