--- a/session 6/homeWork2.css
+++ b/session 6/homeWork2.css
@@ -11,25 +11,20 @@ li:before {
 }
 body{
 	width: 70%;
-	height: 699px;
+	height: 670px;
 	margin: 0 auto;
 	margin-top: 16px;
 }
 .background{
-	width: 94%;
+	width: 100%;
 	height: 670px;
 	background-repeat: no-repeat;
-	margin-left: 3%;
-	margin-top: -34.3px;
-	margin-bottom: 18px;
-	float: center;
+	padding-right: 20px;
 }
 .box{
 	height: 70px;
 	width: 97%;
 	background-color: #66a3ff;
-	border-right: none;
-	border-left: none;
 	margin-top: -650px;
 }
 .brand{
@@ -141,32 +136,14 @@ body{
 	margin-top: 15px;
 }
 @media screen and (max-width: 1024px){
-	.background{
-	width: 94%;
-	height: 670px;
-	background-repeat: no-repeat;
-	margin-left: 6%;
-	margin-top: -34.3px;
-	margin-bottom: 18px;
-	float: center;
-}
 
 }
 @media screen and (max-width: 768px){
-	.background{
-	width: 94%;
-	height: 670px;
-	background-repeat: no-repeat;
-	margin-left: 5%;
-	margin-top: -34.3px;
-	float: center;
+.background{
+	height: 700px;
 }
 	body{
-		width:70%;
-		height: 750px;
-		border:5px solid grey;
-		border-bottom: none;
-		border-top: none;
+		height: 700px;
 		padding-top: 8px;
 	}
 	.global{
@@ -177,6 +154,9 @@ body{
 	}
 	.tools{
 		width: 25%;
+	}
+	.box{
+		margin-top: -705px;
 	}
 
 	.heroFeture{
@@ -245,25 +225,19 @@ body{
 	.box5{
 		height: 70px;
 	}
-	
 }
 @media screen and (max-width: 480px){
 	body{
-		height: 420px;
-		padding-right: 20px;
+		height: 350px;
 	}
 	.background{
-	width: 94%;
-	height: 600px;
-	background-repeat: no-repeat;
-	margin-left: 7%;
-	margin-top: 40px;
-	margin-top: -34.3px;
-	margin-bottom: 18px;
-	float: center;
+	height: 350px;
+	margin-top: 20px;
+	padding-right: 20px;
 }
 	.box{
 		height: 80px;
+		margin-top: -350px;
 	}
 	.brand{
 		width: 100%;
@@ -338,7 +312,7 @@ body{
 		display: none;
 	}
 	.box5{
-		
+		height: 60px;
 	}
 	.heroColl{
 		height: 30px;
