--- a/session 15/css/homeWork2.css
+++ b/session 15/css/homeWork2.css
@@ -1,10 +1,14 @@
+body{
+	width: 80%;
+	margin: 0 auto;
+}
 .symbol{
 	color: red;
 }
 #displayName{
 	margin-left: 60px;
 	height: 30px;
-	width: 40%;
+	width: 23.3%;
 }
 #displayDate{
 	margin-left: 10px;
@@ -19,3 +23,14 @@
 	margin-left: 110px;
 	background-color: #ada;
 }
+#errorDate, #errorMonth, #errorYear, #errorName, #errorPhone{
+	color: red;
+}
+#date, #month {
+	width: 30px;
+	height: 30px;
+}
+ #year{
+ 	width: 50px;
+ 	height: 30px;
+ }
