--- a/session 16/css/learn2.css
+++ b/session 16/css/learn2.css
@@ -1,19 +1,10 @@
 #myBox1{
-	height: 50px;
-	width: 50px;
 	position: absolute;
-	font-size: 13px;
-	margin-top: 50px;
-	float: left;
-	border-right: 1px solid black;
+	margin-top: 10px;
 }
 #myBox2{
-	height: 50px;
-	width: 50px;
 	position: absolute;
-	font-size: 13px;
-	margin-top: 50px;
-	float: left;
+	margin-top: -60px;
 }
 #myBox{
 	height: 50px;
@@ -21,7 +12,34 @@
 	background-color: #ada;
 	position: absolute;
 	font-size: 13px;
-	margin-top: 50px;
-	float: left;
-	border-right: 1px solid black;
+	margin-top: 30px;
+}
+.runMyBox, .showHide{
+	display: none;
+}
+#myBox{
+	display: none;
+}
+.runImage{
+	text-align: center;
+	font-size: 40px;
+	color: red;
+	margin-top: -30px;
+}
+#myBox3{
+	position: absolute;
+	font-size: 13px;
+	margin-top: 70px;
+}
+#myBox4{
+	position: absolute;
+	margin-top: 130px;
+}
+#myBox5{
+	position: absolute;
+	margin-top: 230px;
+}
+#myBox6{
+	position: absolute;
+	margin-top: 340px;
 }
